Random Minor Improvements

--- a/localisation/english/0_energy_l_english.yml
+++ b/localisation/english/0_energy_l_english.yml
@@ -168,7 +168,7 @@
  energy.3.a: "Purchase Denied"
 
  energy.4.t: "A New Enrichment Facility"
- energy.4.d: "[FROM.GetNameWithFlag] is currently constructing its first enrichment facility. How should we proceed? We can demand they cease."
+ energy.4.d: "[FROM.GetNameWithFlag] is currently constructing its first enrichment facility. The new facility will allow the country to start to enrich uranium for things such as nuclear power or in some cases nuclear weaponry. How should we proceed? We can demand they stop construction the facility or we can simply allow them to continue unimpeded."
  energy.4.a: "Demand They Cease"
  energy.4.b: "Allow the Construction"
 
