--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -340,21 +340,21 @@
  attack_helicopter_hull: "Attack Helicopter"
  attack_helicopter_hull_desc: "An attack helicopter is an armed helicopter with the primary role of an attack aircraft, with the capability of engaging targets on the ground, such as enemy infantry and armored fighting vehicles. Due to their heavy armament they are sometimes called helicopter gunships."
  attack_helicopter_desc: "Attack Helicopters are armed helicopters that are designed to support ground forces. Excellent against armoured vehicles and units without air cover, they will be able to deal quickly with enemies that don't have the appropriate countermeasures. However, attack helicopters are very vulnerable against fighter jets and anti-air weaponry."
- attack_helicopter1: "ATK Helicopter 1965"
+ attack_helicopter1: "Attack Helicopter 1965"
  attack_helicopter1_desc: "An attack helicopter is a military helicopter equipped with offensive weapons. Its main weapons are rapid-fire automatic weapons (cannons and machine guns), rocket launchers, and precision-guided weapons (missiles). Many attack helicopters can also be equipped with anti-aircraft missiles, but they are mainly used for self-defense. Today's attack helicopters are similar in function to fixed-wing attack aircraft and are specifically designed to attack ground targets such as infantry, armored vehicles, and buildings."
- attack_helicopter2: "ATK Helicopter 1985"
+ attack_helicopter2: "Attack Helicopter 1985"
  attack_helicopter2_desc: "An attack helicopter is a military helicopter equipped with offensive weapons. Its main weapons are rapid-fire automatic weapons (cannons and machine guns), rocket launchers, and precision-guided weapons (missiles). Many attack helicopters can also be equipped with anti-aircraft missiles, but they are mainly used for self-defense. Today's attack helicopters are similar in function to fixed-wing attack aircraft and are specifically designed to attack ground targets such as infantry, armored vehicles, and buildings."
- attack_helicopter3: "ATK Helicopter 2005"
+ attack_helicopter3: "Attack Helicopter 2005"
  attack_helicopter3_desc: "An attack helicopter is a military helicopter equipped with offensive weapons. Its main weapons are rapid-fire automatic weapons (cannons and machine guns), rocket launchers, and precision-guided weapons (missiles). Many attack helicopters can also be equipped with anti-aircraft missiles, but they are mainly used for self-defense. Today's attack helicopters are similar in function to fixed-wing attack aircraft and are specifically designed to attack ground targets such as infantry, armored vehicles, and buildings."
- attack_helicopter4: "ATK Helicopter 2015"
+ attack_helicopter4: "Attack Helicopter 2015"
  attack_helicopter4_desc: "An attack helicopter is a military helicopter equipped with offensive weapons. Its main weapons are rapid-fire automatic weapons (cannons and machine guns), rocket launchers, and precision-guided weapons (missiles). Many attack helicopters can also be equipped with anti-aircraft missiles, but they are mainly used for self-defense. Today's attack helicopters are similar in function to fixed-wing attack aircraft and are specifically designed to attack ground targets such as infantry, armored vehicles, and buildings."
- attack_helicopter5: "ATK Helicopter 2035"
+ attack_helicopter5: "Attack Helicopter 2035"
  attack_helicopter5_desc: "An attack helicopter is a military helicopter equipped with offensive weapons. Its main weapons are rapid-fire automatic weapons (cannons and machine guns), rocket launchers, and precision-guided weapons (missiles). Many attack helicopters can also be equipped with anti-aircraft missiles, but they are mainly used for self-defense. Today's attack helicopters are similar in function to fixed-wing attack aircraft and are specifically designed to attack ground targets such as infantry, armored vehicles, and buildings."
- nsb_attack_helicopter_tech_1: "1st Gen ATK Helicopter"
- nsb_attack_helicopter_tech_2: "2nd Gen ATK Helicopter"
- nsb_attack_helicopter_tech_3: "3rd Gen ATK Helicopter"
- nsb_attack_helicopter_tech_4: "4th Gen ATK Helicopter"
- nsb_attack_helicopter_tech_5: "5th Gen ATK Helicopter"
+ nsb_attack_helicopter_tech_1: "1st Gen Attack Helicopter"
+ nsb_attack_helicopter_tech_2: "2nd Gen Attack Helicopter"
+ nsb_attack_helicopter_tech_3: "3rd Gen Attack Helicopter"
+ nsb_attack_helicopter_tech_4: "4th Gen Attack Helicopter"
+ nsb_attack_helicopter_tech_5: "5th Gen Attack Helicopter"
 
  submarine_1: "Submarine Engineering"
  submarine_1_desc: "Researching This Will Allow Us To Research Further Submarines"
