--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -697,9 +697,9 @@
  MODIFIER_CAVALRY_ATTACK_FACTOR: "£attack_cavalry_texticon  Cavalry Attack"
  MODIFIER_CAVALRY_DEFENCE_FACTOR: "£defence_cavalry_texticon  Cavalry Defense"
  MODIFIER_CARRIER_SORTIE_EFFICIENCY_FACTOR: "£sortie_efficiency_texticon  Sortie efficiency"
- MODIFIER_CARRIER_SORTIE_EFFICIENCY_FACTOR_DESC: "The value describes additional percents to the speed of refueling and rearming planes on the carrier during the battle."
+ MODIFIER_CARRIER_SORTIE_EFFICIENCY_FACTOR_DESC: "The value describes additional percentage to the speed of refueling and rearming planes on the carrier during the battle."
  MODIFIER_CARRIER_FIGHTER_SORTIE_EFFICIENCY_FACTOR: "£sortie_efficiency_texticon  Fighters sortie efficiency"
- MODIFIER_CARRIER_FIGHTER_SORTIE_EFFICIENCY_FACTOR_DESC: "The additional percents to the speed when refueling and rearming fighter planes on the carrier during the battle."
+ MODIFIER_CARRIER_FIGHTER_SORTIE_EFFICIENCY_FACTOR_DESC: "The additional percentage to the speed when refueling and rearming fighter planes on the carrier during the battle."
  MODIFIER_NAVY_SUBMARINE_ATTACK_FACTOR: "£attack_submarine_texticon  Submarine Attack"
  MODIFIER_NAVY_SUBMARINE_ATTACK_FACTOR_DESC: "Modifies the attack value of Submarines"
  MODIFIER_NAVY_SUBMARINE_DEFENCE_FACTOR: "£defence_submarine_texticon  Submarine Defense"
@@ -759,11 +759,11 @@
  MODIFIER_TRADE_OPINION_FACTOR_DESC: "Factor of opinion value in trade deals"
  MODIFIER_FACTION_TRADE_OPINION_FACTOR: "£trade_deal_opinion_texticon  Faction trade deal opinion factor"
  MODIFIER_FACTION_TRADE_OPINION_FACTOR_DESC: "Factor of opinion value in trade deals between members of the same faction."
- MODIFIER_GROUND_ATTACK: "£cas_texticon  Ground Atk"
- MODIFIER_GROUND_ATTACK_FACTOR: "£cas_texticon  Ground Atk factor"
- MODIFIER_AIR_TAC_GROUND_ATTACK: "£tac_bomber_texticon  TAC attack"
+ MODIFIER_GROUND_ATTACK: "£cas_texticon  Ground Attack"
+ MODIFIER_GROUND_ATTACK_FACTOR: "£cas_texticon  Ground Attack factor"
+ MODIFIER_AIR_TAC_GROUND_ATTACK: "£tac_bomber_texticon  Tactical attack"
  MODIFIER_AIR_TAC_GROUND_ATTACK_DESC: "Bonus to tactical bomber attacks on ground troops."
- MODIFIER_AIR_TAC_GROUND_ATTACK_FACTOR: "£tac_bomber_texticon  TAC attack"
+ MODIFIER_AIR_TAC_GROUND_ATTACK_FACTOR: "£tac_bomber_texticon  Tactical attack"
  MODIFIER_AIR_TAC_GROUND_ATTACK_FACTOR_DESC: "Bonus to tactical bomber attacks on ground troops."
  MODIFIER_AIR_CAS_GROUND_ATTACK: "£cas_texticon  CAS attack"
  MODIFIER_AIR_CAS_GROUND_ATTACK_DESC: "Bonus to close air support attacks on ground troops."
@@ -771,7 +771,7 @@
  MODIFIER_AIR_CAS_GROUND_ATTACK_FACTOR_DESC: "Bonus to close air support attacks on ground troops."
  MODIFIER_AIR_CAS_PRESENT_FACTOR: "£cas_texticon  Ground support"
  MODIFIER_AIR_CAS_PRESENT_FACTOR_DESC: "Having well-coordinated planes helping out in combat lets your troops fight better."
- MODIFIER_AIR_TAC_STRATEGIC_BOMBING_FACTOR: "£tac_bomber_texticon  TAC Bombing"
+ MODIFIER_AIR_TAC_STRATEGIC_BOMBING_FACTOR: "£tac_bomber_texticon  Tactical Bombing"
  MODIFIER_AIR_TAC_STRATEGIC_BOMBING_FACTOR_DESC: "Bonus to Tactical bombers performing regular strategic bombing."
  MODIFIER_TRAINING_TIME_FACTOR: "£training_speed_texticon  Training time"
  MODIFIER_TRAINING_TIME_FACTOR_DESC: "Changes the time it takes to train troops."
