--- a/localisation/english/MD_focus_POL_l_english.yml
+++ b/localisation/english/MD_focus_POL_l_english.yml
@@ -830,7 +830,7 @@
  POL_purchase_of_100_Leopards_from_bundeswehr_surplus: "Purchase Of 85 Leopards From Bundeswehr Surplus"
  POL_purchase_of_100_Leopards_from_bundeswehr_surplus_desc: "Importing German tanks will be cheap because we practically border on them."
 
- POL_modernization_of_leopards_to_the_2pl_standard: "Mordernization Of Leopards To Another Generation"
+ POL_modernization_of_leopards_to_the_2pl_standard: "Modernization Of Leopards To Another Generation"
  POL_modernization_of_leopards_to_the_2pl_standard_desc: "Leopards are strong, but still need a little refreshment."
 
  POL_modernization_of_apc_vehicles: "Modernization Of APC Vehicles"
