--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -917,7 +917,7 @@
  MODIFIER_AUTONOMY_MANPOWER_SHARE: "£manpower_cost_texticon  Subject manpower requirement"
  MODIFIER_AUTONOMY_MANPOWER_SHARE_DESC: "Amount of manpower required by subject forces"
  MODIFIER_TRADE_TO_OVERLORD_FACTOR: "£trade_texticon  Extra trade to overlord"
- MODIFIER_TRADE_TO_OVERLORD_FACTOR_DESC: "Extra produced recourses available for trade to overlord"
+ MODIFIER_TRADE_TO_OVERLORD_FACTOR_DESC: "Extra produced resources available for trade to overlord"
  MODIFIER_TRADE_COST_FACTOR: "£trade_texticon  Overlord trade cost"
  MODIFIER_TRADE_COST_FACTOR_DESC: "Resources per factory in trade from subject to overlord"
  MODIFIER_CIC_TO_OVERLORD_FACTOR: "£civ_factory  Civilian industry to overlord"
@@ -931,11 +931,11 @@
  MODIFIER_AUTONOMY_GAIN_LL_TO_OVERLORD: "£autonomy_texticon  Freedom gain by lend lease to overlord"
  MODIFIER_AUTONOMY_GAIN_LL_TO_OVERLORD_DESC: "Effect on freedom gained or lossed by subject from lend lease to overlord"
  MODIFIER_AUTONOMY_GAIN_LL_TO_SUBJECT: "£autonomy_texticon  Freedom gain by subject from lend lease from overlord"
- MODIFIER_AUTONOMY_GAIN_LL_TO_SUBJECT_DESC: "Effect on freedom gained or lossed by subject from lend lease fromt overlord"
+ MODIFIER_AUTONOMY_GAIN_LL_TO_SUBJECT_DESC: "Effect on freedom gained or lossed by subject from lend lease from overlord"
  MODIFIER_AUTONOMY_GAIN_LL_TO_OVERLORD_FACTOR: "£autonomy_texticon  Freedom gain by lend lease to overlord"
  MODIFIER_AUTONOMY_GAIN_LL_TO_OVERLORD_FACTOR_DESC: "Effect on freedom gained or lossed by subject from lend lease to overlord"
  MODIFIER_AUTONOMY_GAIN_LL_TO_SUBJECT_FACTOR: "£autonomy_texticon  Freedom gain by subject from lend lease from overlord"
- MODIFIER_AUTONOMY_GAIN_LL_TO_SUBJECT_FACTOR_DESC: "Effect on freedom gained or lossed by subject from lend lease fromt overlord"
+ MODIFIER_AUTONOMY_GAIN_LL_TO_SUBJECT_FACTOR_DESC: "Effect on freedom gained or lossed by subject from lend lease from overlord"
  MODIFIER_AUTONOMY_GAIN_WARSCORE: "£autonomy_texticon  Freedom gain by war score"
  MODIFIER_AUTONOMY_GAIN_WARSCORE_DESC: "Effect on freedom gained from war participation"
  MODIFIER_AUTONOMY_GAIN_WARSCORE_FACTOR: "£autonomy_texticon  Freedom gain by war score"
@@ -1077,7 +1077,7 @@
  MODIFIER_MIC_TO_TARGET_FACTOR: "£mil_factory  Military industry to target country"
  MODIFIER_MIC_TO_TARGET_FACTOR_DESC: "How many §YMilitary§! factories are controlled by target country"
  MODIFIER_TRADE_TO_TARGET_FACTOR: "£trade_texticon  Extra trade to overlord"
- MODIFIER_TRADE_TO_TARGET_FACTOR_DESC: "Extra produced recourses available for trade to target country"
+ MODIFIER_TRADE_TO_TARGET_FACTOR_DESC: "Extra produced resources available for trade to target country"
  MODIFIER_TRADE_COST_TO_TARGET_FACTOR: "£trade_texticon  Target country trade cost"
  MODIFIER_TRADE_COST_TO_TARGET_FACTOR_DESC: "Resources per factory in trade between countries"
  MODIFIER_SPECIAL_FORCES_NO_SUPPLY_GRACE: "£supply_grace_texticon  Special Forces Supply Grace"
@@ -1099,9 +1099,9 @@
  MODIFIER_NAVAL_CRITICAL_EFFECT_FACTOR: "£critical_hit_texticon  Effects of sustained Critical Hits"
  MODIFIER_NAVAL_CRITICAL_EFFECT_FACTOR_DESC: "Alter the global effects the sustained Critical Hits have on our ships"
  MODIFIER_NAVAL_DAMAGE_FACTOR: "£attacker_damage_texticon  Damage"
- MODIFIER_NAVAL_DAMAGE_FACTOR_DESC: "Alter the damages dealt by our ships to others."
+ MODIFIER_NAVAL_DAMAGE_FACTOR_DESC: "Alter the damage dealt by our ships to others."
  MODIFIER_NAVAL_DEFENSE_FACTOR: "£defence_texticon  Defense"
- MODIFIER_NAVAL_DEFENSE_FACTOR_DESC: "Alter the damages received by our ships."
+ MODIFIER_NAVAL_DEFENSE_FACTOR_DESC: "Alter the damage received by our ships."
  MODIFIER_NAVAL_ENEMY_RETREAT_CHANCE: "£retreat_texticon  Enemy retreat chance"
  MODIFIER_NAVAL_ENEMY_RETREAT_CHANCE_DESC: "Alter the chances of the enemy leaving the combat when it decides to."
  MODIFIER_NAVAL_TORPEDO_REVEAL_CHANCE_FACTOR: "£spotting_night_texticon  Torpedo reveal chance"
@@ -1125,11 +1125,11 @@
  MODIFIER_MINES_SWEEPING_BY_AIR_FACTOR: "£minesweeping_aerial_texticon  Aerial minesweeping efficiency"
  MODIFIER_MINES_SWEEPING_BY_AIR_FACTOR_DESC: "Affects overall efficiency of naval minesweeping, performed by air wings."
  MODIFIER_NAVAL_MINES_EFFECT_REDUCTION: "£minesweeping_texticon  Naval mines avoidance"
- MODIFIER_NAVAL_MINES_EFFECT_REDUCTION_DESC: "Reduces the penalties from the mines layed by the enemies."
+ MODIFIER_NAVAL_MINES_EFFECT_REDUCTION_DESC: "Reduces the penalties from the mines laid by the enemies."
  MODIFIER_NAVAL_MINES_DAMAGE_FACTOR: "£mine_damage_texticon  Naval mines damage"
  MODIFIER_NAVAL_MINES_DAMAGE_FACTOR_DESC: "Extra damage caused by our naval mines."
  MODIFIER_NAVAL_ACCIDENTS_CHANCE: "£naval_accident_texticon  Accident chance"
- MODIFIER_NAVAL_ACCIDENTS_CHANCE_DESC: "Ships may accidently get damaged, or even sunk."
+ MODIFIER_NAVAL_ACCIDENTS_CHANCE_DESC: "Ships may accidentally get damaged, or even sank."
  MODIFIER_pride_of_the_fleet_country: "Has Pride of The Fleet"
  MODIFIER_pride_of_the_fleet_sunk_temporary: "Recently Lost Pride of The Fleet"
  MODIFIER_pride_of_the_fleet: "Pride of The Fleet"
@@ -1220,7 +1220,7 @@
  modifier_experience_gain_patrol_boat_training_factor: "£experience_neutral_training_texticon  Patrol Boat Experience Gain"
  modifier_experience_gain_patrol_boat_combat_factor: "£experience_neutral_combat_texticon  Patrol Boat Experience Gain"
  MODIFIER_ARMOR: "£armor_texticon  Armor"
- MODIFIER_ARMY_STRENGTH: "£strenght_texticon  HP"
+ MODIFIER_ARMY_STRENGTH: "£strenght_texticon  Health Power"
  MODIFIER_BREAKTHROUGH: "£breakthrough_texticon  Breakthrough"
  MODIFIER_carrier_experience_bonus_max: "From Carrier Experience"
  MODIFIER_carrier_experience_malus_min: "From Carrier Experience"
