fixed some minor localziation and then a display bug

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -42,6 +42,7 @@ v1.10.5
   - If you leave NATO you should now lose the NATO Nuclear Sharing Group idea
   - Fixed an issue with a national spirit not being removed for Indonesia
   - Fixed Jack Layton being in the wrong party for Canada
+  - Fixed the broken display in the leasing section stopping working at 20 leased buildings
 
  Graphics:
   - Reworked most of the decision menu pictures
