--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -1527,7 +1527,7 @@
  unit_paratrooper_design_cost_factor: "£tank_design_cost_texticon  Paratroopers Unit Design Cost"
  unit_motorized_design_cost_factor: "£tank_design_cost_texticon  Motorized Infantry Unit Design Cost"
  unit_mechanized_design_cost_factor: "£tank_design_cost_texticon  Mechanized Infantry Unit Design Cost"
- unit_fake_intel_unit_design_cost_factor: "£tank_design_cost_texticon  Fake Intel Batallion Unit Design Cost"
+ unit_fake_intel_unit_design_cost_factor: "£tank_design_cost_texticon  Fake Intel Battalion Unit Design Cost"
  unit_light_armor_design_cost_factor: "£tank_design_cost_texticon  Light Tank Unit Design Cost"
  unit_modular_light_armor_design_cost_factor: "£tank_design_cost_texticon  modular_light_armor Unit Design Cost"
  unit_light_cruiser_design_cost_factor: "£navy_design_cost_texticon  Light Cruiser Unit Design Cost"
