--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -1699,7 +1699,7 @@
  module_tank_high_velocity_cannon_3_design_cost_factor: "£tank_design_cost_texticon  Tank Advanced High-Velocity Cannon Design Cost"
  module_tank_heavy_cannon_design_cost_factor: "£tank_design_cost_texticon  Tank Basic Heavy Cannon Design Cost"
  module_tank_heavy_cannon_2_design_cost_factor: "£tank_design_cost_texticon  Tank Improved Heavy Cannon Design Cost"
- module_tank_heavy_cannon_3_design_cost_factor: "£tank_design_cost_texticon  Tank Improved Heavy Cannon Design Cost"
+ module_tank_heavy_cannon_3_design_cost_factor: "£tank_design_cost_texticon  Tank Advanced Heavy Cannon Design Cost"
  module_tank_heavy_howitzer_design_cost_factor: "£tank_design_cost_texticon  Tank Heavy Howitzer Design Cost"
  module_tank_super_heavy_cannon_design_cost_factor: "£tank_design_cost_texticon  Tank Super-Heavy Cannon Design Cost"
  module_tank_radio_1_design_cost_factor: "£tank_design_cost_texticon  Tank Basic Radio Design Cost"
