--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -1777,8 +1777,8 @@
  trait_inspirational_leader_xp_gain_factor: "£experience_neutral_texticon  Inspirational Leader Trait XP Gain"
  trait_invader_ii_xp_gain_factor: "£experience_neutral_texticon  Invader Ii Trait XP Gain"
  trait_ironside_xp_gain_factor: "£experience_neutral_texticon  Ironside Trait XP Gain"
- trait_JAP_communist_sympathizer_xp_gain_factor: "£experience_neutral_texticon  Japanese Communist Sympathizer Trait XP Gain"
- trait_JAP_samurai_lineage_xp_gain_factor: "£experience_neutral_texticon  Japanese Samurai Lineage Trait XP Gain"
+ trait_JAP_communist_sympathizer_xp_gain_factor: "£experience_neutral_texticon  JAP Communist Sympathizer Trait XP Gain"
+ trait_JAP_samurai_lineage_xp_gain_factor: "£experience_neutral_texticon  JAP Samurai Lineage Trait XP Gain"
  trait_jungle_rat_xp_gain_factor: "£experience_neutral_texticon  Jungle Rat Trait XP Gain"
  trait_lancer_xp_gain_factor: "£experience_neutral_texticon  Lancer Trait XP Gain"
  trait_loading_drill_master_xp_gain_factor: "£experience_neutral_texticon  Loading Drill Master Trait XP Gain"
