--- a/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
+++ b/localisation/english/replace/replaced_from_vanilla_modifiers_l_english.yml
@@ -1957,7 +1957,7 @@
  modifier_experience_gain_Arm_Air_assault_Bat_combat_factor: "£experience_neutral_combat_texticon Armored Air Assault Infantry experience gain from combat"
  modifier_experience_gain_atk_helo_bat_combat_factor: "£experience_neutral_combat_texticon Attack Helicopter experience gain from combat"
  production_cost_supply_node_factor: "£under_construction_texticon  §Y$supply_node$§! construction cost"
- production_cost_supply_node_factor_desc: "Modifies the cost of Supply Hub construction."
+ production_cost_supply_node_factor_desc: "Modifies the cost of §Y$supply_node$§! construction."
  SUPPLY_PENALTY_ON_CORE: "£supply_consumption_core_texticon  Supply Combat Penalties on Core Territory"
  supply_combat_penalties_on_core_factor: "£supply_consumption_core_texticon  Supply Combat Penalties on Core Territory"
  coordination_bonus: "£coordination_texticon  Coordination"
@@ -2039,7 +2039,7 @@
  STAT_ARMY_COMBAT_WIDTH: "£combat_width_texticon  Combat width: "
  STAT_ARMY_DEFENSE: "£defence_texticon  Defense: "
  STAT_ARMY_COLLATERAL: "£going_to_combat  Collateral damage: "
- STAT_ARMY_BREAKTHROUGH: "£breakthrough_texticon  Breakthr.: "
+ STAT_ARMY_BREAKTHROUGH: "£breakthrough_texticon  Breakthrough: "
  STAT_ARMY_HARDNESS: "£attacker_damage_texticon  Hardness: "
  STAT_ARMY_SOFT_ATTACK: "£soft_attack_texticon  Soft attack: "
  STAT_ARMY_HARD_ATTACK: "£hard_attack_texticon  Hard attack: "
@@ -2077,7 +2077,7 @@
  STAT_AIR_NAVAL_STRIKE_TARGETTING: "£naval_strike_targetting_texticon  Naval Targeting: "
  STAT_AIR_NAVAL_STRIKE_AGILITY: "£attacker_speed_texticon  Naval Agility: "
  STAT_AIR_GROUND_ATTACK: "£cas_texticon  Ground Attack: "
- STAT_COMMON_MAX_STRENGTH: "£strenght_texticon  HP: "
+ STAT_COMMON_MAX_STRENGTH: "£strenght_texticon  Health Power: "
  STAT_COMMON_BUILD_COST_IC: "£production_cost  Production Cost: "
  STAT_COMMON_MAXIMUM_SPEED: "£attacker_speed_texticon  Speed: "
  STAT_NAVY_MAXIMUM_SPEED: "£attacker_speed_texticon  Speed: "
@@ -2088,14 +2088,14 @@
  STAT_CARRIER_SIZE: "£carrier_capacity_texticon  Deck size: "
  STAT_COMMON_ACCLIMATIZATION_HOT_GAIN: "£temperature_hot_texticon  Hot acclimatization gain factor: "
  STAT_COMMON_ACCLIMATIZATION_COLD_GAIN: "£temperature_cold_texticon  Cold acclimatization gain factor: "
- STAT_AIR_BOMBING: "£strat_bombing_texticon  Strat. Bombing: "
+ STAT_AIR_BOMBING: "£strat_bombing_texticon  Strategic Bombing: "
  COMBAT_WIDTH: "£combat_width_texticon  Combat Width: "
  STAT_ADJUSTER_ATTACK: "£attack_texticon  Attack: "
  STAT_ADJUSTER_DEFENCE: "£defence_texticon  Defense: "
  STAT_ADJUSTER_MOVEMENT: "£movement_texticon  Movement: "
  STAT_ARMY_INITIATIVE: "£initiative_texticon  Initiative: "
  STAT_COMMON_RELIABILITY: "£repairing  Reliability: "
- STAT_COMMON_RELIABILITY_AVERAGE: "£repairing  Av. Reliability: "
+ STAT_COMMON_RELIABILITY_AVERAGE: "£repairing  Average Reliability: "
  STAT_COMMON_RELIABILITY_FACTOR: "£repairing  Reliability Bonus: "
  STAT_COMMON_WEIGHT: "£divisions_texticon  Weight: "
  STAT_CASUALTY_TRICKLEBACK: "£trickleback_texticon  Casualty Trickleback & War Support Protection: "
@@ -2110,7 +2110,7 @@
  SOFT_ATTACK_TAKEN: "£soft_attack_texticon  §TSoft Attack Taken: §!"
  HARD_ATTACK_TAKEN: "£hard_attack_texticon  §THard Attack Taken: §!"
  STAT_COMMON_BUILD_COST_IC_T_CONVERTING: "£equipment_conversion_texticon  §TConversion cost: §!"
- STAT_ARMY_EQUIPMENT_CAPTURE_FACTOR: "£infantry_equipment_texticon  Eq. Capture Ratio: "
+ STAT_ARMY_EQUIPMENT_CAPTURE_FACTOR: "£infantry_equipment_texticon  Equipment Capture Ratio: "
  STAT_ARMY_FUEL_CAPACITY: "£fuel_texticon  Fuel Capacity: "
  STAT_COMMON_FUEL_CONSUMPTION: "£fuel_consumption_texticon  Fuel Usage: "
  STAT_COMMON_FUEL_CONSUMPTION_FACTOR: "£fuel_consumption_texticon  Fuel Usage: "
