--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -2172,7 +2172,7 @@
  corruption.13.a: "Perhaps, an opportunity"
  corruption.13.b: "Bad idea"
  corruption.14.t: "A Proposal of Sorts..."
- corruption.14.d: "One of our close friends reached out and suggested making a small party so goverment can connect closer to its most trusted business"
+ corruption.14.d: "One of our close friends reached out and suggested making a small party so government can connect closer to its most trusted business"
  corruption.14.a: "Perhaps, an opportunity"
  corruption.14.b: "Bad idea"
  corruption.15.t: "A Proposal of Sorts..."
