Moroccan Econmic Tree work

--- a/localisation/english/MD_focus_MOR_l_english.yml
+++ b/localisation/english/MD_focus_MOR_l_english.yml
@@ -757,12 +757,12 @@ l_english:
  MOR_a_rising_naval_power_desc: "A Rising Naval Power"
  MOR_fifth_gen_carrier_capabilities: "Fifth Gen Carrier Capabilities "
  MOR_fifth_gen_carrier_capabilities_desc: "Fifth Gen Carrier Capabilities"
- MOR_the_moroccan_economy: "The Moroccan Economy "
- MOR_the_moroccan_economy_desc: "The Moroccan Economy"
- MOR_the_bounty_of_the_mountains: "The Bounty Of The Mountains "
- MOR_the_bounty_of_the_mountains_desc: "The Bounty Of The Mountains"
- MOR_exploit_gold_reserves: "Exploit Gold Reserves "
- MOR_exploit_gold_reserves_desc: "Exploit Gold Reserves"
+ MOR_the_moroccan_economy: "The Moroccan Economy"
+ MOR_the_moroccan_economy_desc: "The Moroccan economy is one of the more liberal economies in North Africa marked with progressive liberlization and remains as one of the top ten largest ecoonomies in Africa."
+ MOR_the_bounty_of_the_mountains: "The Bounty Of The Mountains"
+ MOR_the_bounty_of_the_mountains_desc: "The Atlas and Rif mountains have numerous and untold riches hiding just beneath the gorgeous brown ridges and peaks. It holds steady the lifeline of our industrial power and the autonomy of our industry for now and for the future. The bounty must be tapped and it must be exploited."
+ MOR_exploit_gold_reserves: "Exploit Gold Reserves"
+ MOR_exploit_gold_reserves_desc: "Morocco is home to some of the largest gold reserves in Africa and the Arab world. The various companies and mining outfits continue to find more gold reserves throughout the country. It should be one of our top priorities to exploit these reserves."
  MOR_exploit_iron_reserves: "Exploit Iron Reserves "
  MOR_exploit_iron_reserves_desc: "Exploit Iron Reserves"
  MOR_cooper_mines_and_cooper_times: "Cooper Mines And Cooper Times "
