--- a/localisation/english/MD_focus_HKG_l_english.yml
+++ b/localisation/english/MD_focus_HKG_l_english.yml
@@ -259,6 +259,8 @@
  HKG_legco_decision_categories: "§1LegCo§!"
  legco_current_motion_clock: "Current Motion: §Y[ROOT.legco_current_motion]§!"
  legco_current_special_motion_clock: "Current Motion: §Y[ROOT.legco_current_motion]§!"
+ legco_increase_administration_motion_clock: "Current Motion: §YIncrease Bureaucratic Spending§!"
+ legco_decrease_administration_motion_clock: "Current Motion: §YDecrease Bureaucratic Spending§!"
 
  #Ideas
  HKG_unrestricted_housing_market: "Unrestricted Housing Market"
@@ -331,6 +333,7 @@
  HKG_LegCo_TITLE: "Legislative Council"
  LEGCO_BOOST_APPROVAL_SEAT_TT: "Pay off an Approval Seat."
  LEGCO_BOOST_APPROVAL_SEAT_DESC_TT: "Cost §Y50§! Political Powers to pay off §G1§! approval seat to try to pass the motion."
+ HKG_legco_block_tt: "This §YLaw§! must be §GApproved§! by the §YLegCo§!."
 
  legco_pro_beijing_camp_desc: "§CPro-establishment camp§!:\n £HKG_Conservative Democratic Alliance for the Betterment of Hong Kong (DAB)\n £HKG_Autocracy The New People's Party (NPP)\n £HKG_anarchist_communism Hong Kong Federation of Trade Unions (HKFTU)\n £HKG_Neutral_conservatism Path of Democracy\n £HK_Liberal_Party Liberal Party\n £generic_Neutral_Libertarian_small Third Side\n"
  legco_pan_democracy_camp_desc: "§8Pan-democracy camp§!:\n £HK_Demosisto Demosisto\n £HKG_conservatism Democratic Party\n [legco_HKG_liberalism]\n [legco_HKG_socialism]\n £HKG_Neutral_Autocracy Democratic Alliance\n £HK_Green Green Party Hong Kong\n £HK_Left Left 21\n £HK_Fourth_International Revolutionary Communist Party of China\n"
@@ -345,6 +348,16 @@
  legco_total_seats: "Total: §Y[?legco_total_seats]§!"
  legco_election_seats: "§CPro-establishment Camp§! Seats: §C[?legco_PE_seats]§!\n§8Pan-democracy Camp§! Seats: §8[?legco_PD_seats]§!\n§GLocalist Camp§! Seats: §G[?legco_LC_seats]§!"
 
+ legco_change_bureaucracy_button_tt: "Start the §YBureaucracy§! Spending Changing Motion"
+ legco_change_bureaucracy_button_desc_tt: "£click_left §GLeft-click§! to Request Higher Bureaucracy Spending\n£click_right §GRight-click§! to Request Lower Bureaucracy Spending"
+ legco_change_police_button_tt: "Start the §CSecurity§! Spending Changing Motion"
+ legco_change_police_button_desc_tt: "£click_left §GLeft-click§! to Request Higher Security Funding\n£click_right §GRight-click§! to Request Lower Security Funding"
+ legco_change_education_button_tt: "Start the §GEducation§! Spending Changing Motion"
+ legco_change_education_button_desc_tt: "£click_left §GLeft-click§! to Request Higher Education Budget\n£click_right §GRight-click§! to Request Lower Education Budget"
+ legco_change_health_button_tt: "Start the §RHealthcare§! Spending Changing Motion"
+ legco_change_health_button_desc_tt: "£click_left §GLeft-click§! to Request More Funding for Healthcare\n£click_right §GRight-click§! to Request Less Funding for Healthcare"
+ legco_change_social_button_tt: "Start the §nPension§! Changing Motion"
+ legco_change_social_button_desc_tt: "£click_left §GLeft-click§! to Request More Pension Spending\n£click_right §GRight-click§! to Request Less Pension Spending"
 
  legco_motion_vote_supports_tt: "§CPro-establishment Camp§! Supports: [?legco_PE_temp_support|2%](§C[?legco_PE_support|0]/[?legco_PE_seats|0]§!)\n§8Pan-democracy Camp§! Supports: [?legco_PD_temp_support|2%](§8[?legco_PD_support|0]/[?legco_PD_seats|0]§!)\n§GLocalist Camp§! Support: [?legco_LC_temp_support|2%](§G[?legco_LC_support|0]/[?legco_LC_seats|0]§!)"
  legco_motion_title: "Current Motion: "
@@ -354,6 +367,7 @@
  legco_none_motion_tt: "Recess"
  legco_clock_trigger_tt: "There is a motion currently being voted on."
  legco_decision_effect_tt: "If the §Gapproval seats§! are greater than the number of §Yrequired seats§! (Current: §G[?legco_approval_seats]§! > §Y[?legco_required_seats]§!):"
+ legco_decision_effect_lower_tt: "If the §Gapproval seats§! are lower than the number of §Yrequired seats§! (Current: §G[?legco_approval_seats]§! < §Y[?legco_required_seats]§!):"
  legco_railway_development_strategy_2000_tt: "Railway Development Strategy 2000"
  legco_electoral_reform_tt: "Electoral Reform"
  legco_electoral_reform_forward_tt: "The Proposals for selecting the Chief Executive and forming the LegCo"
@@ -436,9 +450,20 @@
  hongkong.12.t: "The Impact of the Dot-com bubble"
  hongkong.12.d: "As the dot-com bubble burst, PCCW's stock price, which had just completed a merger a few months earlier, plummeted by 98%, resulting in significant negative equity. PCCW had no choice but to plan the sale of its core business to alleviate its financial difficulties."
  hongkong.12.a: "New Millennia, New Problems..."
+
  hongkong_legco.1.t: "The Seats of [GetYear] LegCo"
  hongkong_legco.1.d: "Here is the calculate event for the seats of LegCo.\n<WIP>"
  hongkong_legco.1.a: "Got it."
+ hongkong_legco.2.t: "The motion of increasing §YBureaucracy§! Spending has been passed"
+ hongkong_legco.2.d: "Today, after several rounds of elections in LegCo, the motion to increase bureaucratic spending has been passed."
+ hongkong_legco.2.a: "Democracy of Hong Kong continues to serve the people."
+ hongkong_legco.3.t: "The motion of decreasing §YBureaucracy§! Spending has been passed"
+ hongkong_legco.3.d: "Today, after several rounds of elections in LegCo, the motion to decrease bureaucratic spending has been passed."
+ hongkong_legco.3.a: "Democracy in Hong Kong continues to serve the people."
+ hongkong_legco.4.t: "The motion of changing §YBureaucracy§! Spending has been denied"
+ hongkong_legco.4.d: "Today, after several rounds of elections in LegCo, the motion to change bureaucratic spending has been denied."
+ hongkong_legco.4.a: "They'll change their minds in the future."
+
  hongkong_news.4.t: "123 Democratic Alliance is disbanded today."
  hongkong_news.4.d: "Established in 1994 by a group of pro-Taiwan, pro-democracy and pro-business politicians, the 123 Democratic Alliance was dissolved because lacking of financial support from the Taiwan government, after the Kuomintang's defeat in its presidential election."
  hongkong_news.4.a: "A good news, isn't it?"
