SCO Potential Member State LIst Improvement

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -59,6 +59,7 @@ v1.10.5
   - New focus for Indonesia: "Grasberg Mine Exploitation"
   - You can now request Major Non NATO Ally status if you have over 100 opinion with the United States
   - If you haven't set your nuclear status for Nuclear Energy when constructing Enrichment Facilities it will automatically set it and your production to LEU
+  - SCO member states expansion and tweak, now China could let more countries to join SCO, which most of are African Countries. (Thanks the Suggestion from BlackSyX)
 
  Database:
   - ADJUSTED PRODUCTIVITY: MIC, KOS, KAR, KAC, SHN, WAA, ABK, JUB, CHE
@@ -67,6 +68,7 @@ v1.10.5
  Localization:
   - Fixed an error with Saddams Rage localization not appearing
   - Redid political party names & descriptions for: PER, SAU, TUR, IRQ
+  - Add and Replace tooltips of Chinese focuses for more readable
 
  Modding Resources:
   - Added more detailed unit modifiers for main infantry batallions as well as org modifier for existing sub-unit modifiers
