--- a/localisation/english/MD_tooltips_l_english.yml
+++ b/localisation/english/MD_tooltips_l_english.yml
@@ -539,6 +539,8 @@
  CHI_moonbase_chain_start_tt: "§YThis will start the moon base construction event chain.§!"
  CHI_mars_city_building_chain_start_tt: "§YThis will start the mars city building event chain.§!"
  CHI_arunachal_border_conflict_TT: "§YThis will enable the Arunachal border war with§! §B[RAJ.GetName]§!"
+ CHI_unlock_african_countries_SCO_TT: "If you completed the focus §Y$CHI_Form_the_SCO$§!, this focus will allow more §YAfrican countries§! to join the §YSCO§!."
+ CHI_SCO_Exploit_Economic_Clout_TT: "This §Yfocus§! will increase §Y[CHI.GetFlag]China's influence§! in all §YSCO§! member countries."
  arunachal_tension_TT: "Tension is higher then 80"
  arunachal_readiness_TT: "Our Readiness is higher then 60"
  arunachal_increase_readiness_TT: "§GThis will increase our readiness§!"
