--- a/localisation/english/MD_focus_BRA_l_english.yml
+++ b/localisation/english/MD_focus_BRA_l_english.yml
@@ -506,8 +506,8 @@
  BRA_appease_south_american_socialists_desc: "Venezuela is the main bastion of South American Socialism, we must align ourselves with them to assure our mutual success."
  BRA_industrialization_help_from_china: "Industrialization Help From China"
  BRA_industrialization_help_from_china_desc: "China has a huge industry and economy. If we get some support from them, we might have a better economy."
- BRA_new_communist_goverment: "New Communist Government"
- BRA_new_communist_goverment_desc: "To ensure stability over the nation, the government has to be stable!"
+ BRA_new_communist_government: "New Communist Government"
+ BRA_new_communist_government_desc: "To ensure stability over the nation, the government has to be stable!"
  BRA_five_year_plan: "Five Year Plans"
  BRA_five_year_plan_desc: "The free economic models of the western states is not the future for a socialist state. The return to a planned economy, preferably in the form of classical Soviet-style Five Year Plans, will give the government unchecked influence on the previously unchecked economy."
  BRA_the_corruption_question: "End Corruption"
@@ -764,7 +764,7 @@
  BRA_ending_mamata_desc: "Brazilian polititiants and legislators are all corrupt men who are constantly looking for a piece of the states 'tit'. We need to make the public perceive this government as one that will end the corruption in politics."
  BRA_new_imperial_university: "New Imperial University"
  BRA_new_imperial_university_desc: "Pedro II, one of the greatest if not the greatest brazilian leader, spent very much in education. We should follow Pedro's legacy and improve our Universities and our education."
- BRA_government_reform: "Goverment Reform"
+ BRA_government_reform: "Government Reform"
  BRA_government_reform_desc: "We should fix the errors and avoid the mistakes of the republic, and become the greatest monarchy in the World!"
  BRA_brazilian_traditional_values: "Brazilian Traditional Values"
  BRA_brazilian_traditional_values_desc: "In General, the brazilian population is conservative and christian, so maintining the traditional values will boost our support."
