--- a/localisation/english/MD_focus_DEN_l_english.yml
+++ b/localisation/english/MD_focus_DEN_l_english.yml
@@ -475,8 +475,8 @@
  DEN_NemKonto_desc: "Denmark introduces NemKonto, a digital payment system that enables citizens to receive government payments and benefits directly into their bank accounts. By simplifying payment processing, reducing administrative overhead, and enhancing financial transparency, the government aims to improve the efficiency and integrity of public expenditure."
  DEN_BorDEN_dk: "BorDEN"
  DEN_BorDEN_dk_desc: "Denmark develops BorDEN, a digital platform that facilitates collaboration and information-sharing among government agencies, businesses, and citizens. By centralizing data management, promoting data interoperability, and enabling secure communication channels, the government aims to enhance coordination, innovation, and service delivery across the public sector."
- DEN_Goverment_app: "Borger.dk"
- DEN_Goverment_app_desc: "Denmark launches a Government App to provide citizens with convenient access to government services, information, and resources on their mobile devices. By offering a user-friendly interface, personalized notifications, and integrated functionalities, the app aims to improve citizen engagement, streamline transactions, and enhance the overall user experience of interacting with the government."
+ DEN_Government_app: "Borger.dk"
+ DEN_Government_app_desc: "Denmark launches a Government App to provide citizens with convenient access to government services, information, and resources on their mobile devices. By offering a user-friendly interface, personalized notifications, and integrated functionalities, the app aims to improve citizen engagement, streamline transactions, and enhance the overall user experience of interacting with the government."
  DEN_Pluralist_state: "Pluralist State"
  DEN_Pluralist_state_desc: "Denmark embraces the principles of pluralism, recognizing and valuing the diversity of perspectives, beliefs, and identities within society. By promoting tolerance, inclusivity, and respect for minority rights, the government aims to cultivate a pluralist state where all individuals can freely express themselves, participate in decision-making processes, and contribute to the richness of Danish culture and democracy."
  DEN_Copenhagen_Metro: "Copenhagen Metro"
@@ -508,7 +508,7 @@
  DEN_fight_nationalists: "Fight the Nationalists!"
  DEN_fight_nationalists_desc: "The system has failed and the revolution is now all but an inevitability! Only the ultra-nationalist counter-revolutionaries now stand between us and a new future!"
  DEN_trigger_the_elections: "Solidifying our Rule"
- DEN_trigger_the_elections_desc: "The people have finally gotten rid of the old corrupt goverment. The recent rise of [Communist-State_L] has been unprecendented in the recent years. Eurosceptcism is running rampant and finally the people are in power."
+ DEN_trigger_the_elections_desc: "The people have finally gotten rid of the old corrupt government. The recent rise of [Communist-State_L] has been unprecendented in the recent years. Eurosceptcism is running rampant and finally the people are in power."
  DEN_state_atheism: "State Atheism"
  DEN_state_atheism_desc: "The nationalists have been chased underground, the Queen has been banished and the Church of Denmark has been dismantled - we must ensure that none of these three archaic concepts of 'God, Queen and Country' ever return in any shape or form. The future we will create is one of Atheism, Egalitarianism and Internationalism!"
  DEN_communist_propaganda: "Communist Propaganda"
@@ -600,7 +600,7 @@
  DEN_demilitarise: "Demilitarization"
  DEN_demilitarise_desc: "The money we spent on our military would be put to better use in the civilian sector"
  DEN_civilian_boost: "Making Ready For Expansion"
- DEN_civilian_boost_desc: "Grønland, Færøerne and Bornholm all have quite a small population, we need to use goverment funds to prepare for industrializing their lands"
+ DEN_civilian_boost_desc: "Grønland, Færøerne and Bornholm all have quite a small population, we need to use government funds to prepare for industrializing their lands"
  DEN_Work_for_minorities: "New Work Places"
  DEN_Work_for_minorities_desc: "After defunding the army, and making ready for new industries to be built, we have started digging for more natural resources, all of this requiring labourers in the most unlikely places"
  DEN_sustainable_energy: "Focus on Sustainable Energy"
@@ -1092,7 +1092,7 @@
  denmark.25.d: "A Danish Newspaper, \"Jyllands-Posten\", has recently printed a cartoon sketch, done by Kurt Westergaard, where it depicted a drawing of Prophet Muhammad with a bomb in his turban. This has sparked outrage across the whole Islamic world, with multiple countries banning Danish produces."
  denmark.25.a: "But... freedom of speech?"
  denmark.26.t: "Leaving Iraq"
- denmark.26.d: "The Danish Goverment has announced that they are pulling their troops out of Iraq. Denmark was one of the original coalition countries to take part in the invasion in 2003"
+ denmark.26.d: "The Danish Government has announced that they are pulling their troops out of Iraq. Denmark was one of the original coalition countries to take part in the invasion in 2003"
  denmark.26.a: "Why did we choose to fight?"
  denmark.27.t: "Plot to Kill Kurt Westergaard"
  denmark.27.d: "Danish Police uncovers a plot to kill Kurt Westergaard, the original cartoonist behind the sketch of Prophet Muhammad, which leads to another newspaper reprinting the Muhammad cartoon, which once again sparks protests."
@@ -1122,11 +1122,11 @@
  denmark.35.d: "In early February, 2015, three seperate shootings have occured in Copenhagen.\n\nThe first shooting occured at the Krudttønden Cafe, which was holding a free speech event at that time, which killed film director Finn Nørgaard.\n\nThe second shooting occured in the Great Synagogue, which killed volunteer guard Dan Uzan.\n\n The third shooting occured near an apartment building, in which Danish police identified the perpertrator and engaged in a shootout with him, killing him.\n\n The entire attack claimed the lives of 3 people and saw 5 officers injured. The perpertrator was Omar Abdel Hamid El-Hussein, a man of Palestinian descent, who's had trouble with the law his whole life and, allegedly, declared his allegiance to the extremist group ISIS before the attacks."
  denmark.35.a: "How could such a thing happen in Denmark?"
  denmark.36.t: "Taking Away Asylum Seekers' Valuables"
- denmark.36.d: "Tensions are rising due to an increased amount of asylum seekers. The whole ordeal has put our goverment in a dilemma: should we or should we not claim the valuables of some of these asylum seekers as a way to pay for their stay?"
+ denmark.36.d: "Tensions are rising due to an increased amount of asylum seekers. The whole ordeal has put our government in a dilemma: should we or should we not claim the valuables of some of these asylum seekers as a way to pay for their stay?"
  denmark.36.a: "Hands in the air and give us all your money!"
  denmark.36.b: "Thats insane!"
  denmark.37.t: "Banning Hate Speech"
- denmark.37.d: "Denmark has decided to ban 1 Christian and multiple Muslim foreign preachers, as the goverment believes they are \"preaching hate speech\"."
+ denmark.37.d: "Denmark has decided to ban 1 Christian and multiple Muslim foreign preachers, as the government believes they are \"preaching hate speech\"."
  denmark.37.a: "Thats not Hygge!"
  denmark.38.t: "Ancient Blasphemy Law"
  denmark.38.d: "The Danish parliament has decided to repeal an ancient blasphemy law, which forbids public insults of one's religious beliefs or worship."
@@ -1672,8 +1672,8 @@ DEN_healthcare_for_all: "Healthcare for all"
 DEN_healthcare_for_all_desc: "Denmark upholds the principle of healthcare for all, guaranteeing universal access to essential medical services regardless of socio-economic status or health condition. Through comprehensive coverage, preventive programs, and community-based care, Denmark strives to promote health equity and social justice for all its citizens."
 
 ###Gouverment Projekts Branch
-DEN_goverment_projekts: "Government Projects"
-DEN_goverment_projekts.desc: "Denmark initiates government projects aimed at improving healthcare infrastructure, service delivery, and public health outcomes. By investing in research, technology, and innovation, Denmark seeks to address emerging health challenges, enhance healthcare quality, and strengthen the resilience of its healthcare system."
+DEN_government_projekts: "Government Projects"
+DEN_government_projekts.desc: "Denmark initiates government projects aimed at improving healthcare infrastructure, service delivery, and public health outcomes. By investing in research, technology, and innovation, Denmark seeks to address emerging health challenges, enhance healthcare quality, and strengthen the resilience of its healthcare system."
 DEN_state_only_investments: "State only Investments"
 DEN_state_only_investments.desc: "Denmark considers state-only investments in critical healthcare infrastructure and services, ensuring that essential healthcare assets remain under public ownership and control. By prioritizing public investment and oversight, Denmark safeguards the integrity, accessibility, and affordability of essential healthcare services for its citizens."
 DEN_allow_private_influence: "Allow private Influence"
