--- a/localisation/english/MD_focus_DPR_LPR_HPR_OPR_l_english.yml
+++ b/localisation/english/MD_focus_DPR_LPR_HPR_OPR_l_english.yml
@@ -207,7 +207,7 @@
  DPR_youth_front: "Donetsk Youth Policy"
  DPR_anti_lgbt: "Anti-LGBT"
  DPR_mgb: "Ministry of State Security"
- DPR_no_goverment_idea: "Absence Of A Central Government"
+ DPR_no_government_idea: "Absence Of A Central Government"
  DPR_civil_war: "War In Donbass"
  DPR_ter_orobona: "Territorial Defense"
  NOV_novorossia: "Novorossiya"
@@ -309,7 +309,7 @@
  OPR_unproffesional_army: "Unorganized Militia"
  OPR_proffesional_army: "People's Militia"
  OPR_bivaluta: "Dual Currency Period"
- OPR_no_goverment_idea: "Absence Of A Central Government"
+ OPR_no_government_idea: "Absence Of A Central Government"
  OPR_ter_orobona: "Territorial Defense"
  OPR_forts_buildings: "Concentration On Fortifications"
  ##########Cosmetic Tags##########
@@ -404,7 +404,7 @@
  HPR_unproffesional_army: "Unorganized Militia"
  HPR_proffesional_army: "People's Militia"
  HPR_bivaluta: "Dual Currency Period"
- HPR_no_goverment_idea: "Absence Of A Central Government"
+ HPR_no_government_idea: "Absence Of A Central Government"
  HPR_kubgaz_idea: "Kubgaz"
  HPR_ter_orobona: "Territorial Defense"
  HPR_forts_buildings: "Concentration On Fortifications"
@@ -563,7 +563,7 @@
  LPR_russian_money: "Russian Investments"
  LPR_reforming_army_sov: "Full integration into the Russian Army"
  LPR_ter_orobona: "Territorial Defense"
- LPR_no_goverment_idea: "Absence Of A Central Government"
+ LPR_no_government_idea: "Absence Of A Central Government"
  LPR_mgb: "Ministry of State Security"
  ##########Cosmetic Tags##########
  LPR_stakhanov: "Republic of Stakhanov"
