--- a/localisation/english/MD_focus_VEN_l_english.yml
+++ b/localisation/english/MD_focus_VEN_l_english.yml
@@ -728,7 +728,7 @@
  VEN_encouraging_hydropower: "Encouraging Hydropower"
  VEN_encouraging_hydropower_desc: "Venezuela commits to the development and expansion of hydropower infrastructure. This involves the construction of dams, reservoirs, and power plants to harness the energy potential of its water resources."
  VEN_extracting_metals: "Extracting Precious Metals"
- VEN_extracting_metals_desc: "The goverment emphasizes the nation's efforts to harness its valuable natural resources, particularly precious metals like gold and diamonds. This focus embodies Venezuela's drive to exploit its mineral wealth for economic growth and national development."
+ VEN_extracting_metals_desc: "The government emphasizes the nation's efforts to harness its valuable natural resources, particularly precious metals like gold and diamonds. This focus embodies Venezuela's drive to exploit its mineral wealth for economic growth and national development."
  VEN_acheiving_nuclear_power: "Achieving Nuclear Power"
  VEN_acheiving_nuclear_power_desc: "Venezuela, recognizing the potential of nuclear power in the modern world, sets its sights on developing a peaceful nuclear program. The government emphasizes the use of nuclear technology for civilian purposes, such as energy generation and medical applications."
  VEN_the_oil_issue: "The Oil Question"
