--- a/localisation/english/events_l_english.yml
+++ b/localisation/english/events_l_english.yml
@@ -1807,16 +1807,16 @@
  AfghanistanHostageCrisis.5.a: "We must accept."
  AfghanistanHostageCrisis.5.b: "We won't negociate with terrorists!"
  AfghanistanHostageCrisis.6.t: "The US denies our request"
- AfghanistanHostageCrisis.6.d: "Representatives from the US military have rejected our request to release Taliban inmates from military prisons \n\nthe Jihadist reacted killing two hostages before proposing new demands, the North Korean goverment has also called for the release of the hostages"
+ AfghanistanHostageCrisis.6.d: "Representatives from the US military have rejected our request to release Taliban inmates from military prisons \n\nthe Jihadist reacted killing two hostages before proposing new demands, the North Korean government has also called for the release of the hostages"
  AfghanistanHostageCrisis.6.a: "How will the Taliban react to this?"
  AfghanistanHostageCrisis.7.t: "Afghan government rejects Taliban demand"
- AfghanistanHostageCrisis.7.d: "The representatives of the Afghan goverment have dismissed the Taliban demands as unrealizable, the Jihadist reacted killing two hostages before proposing new demands, the North Korean goverment has also called for the release of the hostages"
+ AfghanistanHostageCrisis.7.d: "The representatives of the Afghan government have dismissed the Taliban demands as unrealizable, the Jihadist reacted killing two hostages before proposing new demands, the North Korean government has also called for the release of the hostages"
  AfghanistanHostageCrisis.7.a: "Barbaric!"
  AfghanistanHostageCrisis.8.t: "South Koreas withdraws from Afghanistan"
- AfghanistanHostageCrisis.8.d: "Following a hostages crisis in Afghanistan the South Korean goverment have accepted the Taliban demands and started retreating their forces. \n\nThe Taliban announced that a ramson of twenty million dolars was payed, however the South Korean didn't make any statement."
+ AfghanistanHostageCrisis.8.d: "Following a hostages crisis in Afghanistan the South Korean government have accepted the Taliban demands and started retreating their forces. \n\nThe Taliban announced that a ramson of twenty million dolars was payed, however the South Korean didn't make any statement."
  AfghanistanHostageCrisis.8.a: "Afghanistan continues to destabilize."
  AfghanistanHostageCrisis.9.t: "South Korean hostages executed"
- AfghanistanHostageCrisis.9.d: "Following a hostages crisis in Afghanistan the South Korean goverment have rejected all the Taliban demands, the next they announced that all the hostages were assassinated."
+ AfghanistanHostageCrisis.9.d: "Following a hostages crisis in Afghanistan the South Korean government have rejected all the Taliban demands, the next they announced that all the hostages were assassinated."
  AfghanistanHostageCrisis.9.a: "More victims of the Afghan conflict."
 
  ContactIran.0.t: "Afghanistan calls back their people"
