--- a/localisation/english/MD_focus_CHI_l_english.yml
+++ b/localisation/english/MD_focus_CHI_l_english.yml
@@ -1017,7 +1017,7 @@
  china.15.a: "Hope for peace"
  
  china.16.t: "China Central Authority Drawing lots from Golden Urn for choosing 9th Jebtsundamba Khutuktu"
- china.16.d: "The Jebtsundamba Khutuktu is a title given to the spiritual head of the Gelug lineage of Tibetan Buddhism in Mongolia. They also hold the title of Bogd Gegeen, making them the top-ranked lama in Mongolia. After Jebtsundamba Khutuhtu reincarnation ceremony was banned by the Mongolian goverment for nearly 10 decade, to improve the relationship of Outer Mongolian people, the Chinese goverment is making an effort to find the 9th Jebtsundamba Khutuktu."
+ china.16.d: "The Jebtsundamba Khutuktu is a title given to the spiritual head of the Gelug lineage of Tibetan Buddhism in Mongolia. They also hold the title of Bogd Gegeen, making them the top-ranked lama in Mongolia. After Jebtsundamba Khutuhtu reincarnation ceremony was banned by the Mongolian government for nearly 10 decade, to improve the relationship of Outer Mongolian people, the Chinese government is making an effort to find the 9th Jebtsundamba Khutuktu."
  china.16.a: "The 9th Jebtsundamba Khutuktu would be discover."
 
  china.17.t: "The 9th Jebtsundamba Khutuktu has chosen"
