--- a/localisation/english/MD_focus_POL_l_english.yml
+++ b/localisation/english/MD_focus_POL_l_english.yml
@@ -2920,7 +2920,7 @@
  POL_construction_reform: "Construction Process Reformed"
  POL_construction_reform_desc: "Construction unions installed only recently now control most major construction sites in a country."
  POL_quality_control_idea: "Local Quality Control"
- POL_quality_control_idea_desc: "Recently goverment made a major push to ensure top-quality of vast array of proudcts."
+ POL_quality_control_idea_desc: "Recently government made a major push to ensure top-quality of vast array of proudcts."
  POL_speed_development_idea: "High Speed Development"
  POL_speed_development_idea_desc: "With recent pushes to increase speed of many projects started in recent years it is now clear that talks had eventually led to some action and control."
  POL_increase_research_funding_idea: "Research Funding Increased"
@@ -2943,7 +2943,7 @@
  POL_sre_high_success_desc: "With factories managing to out-perform what is expected from them, whole economy is experiencing a signs of excellence and growth."
  POL_sre_highest_success_desc: "State economy is now a state-of-the-art level institute. It provides all that is required and will surely help with industrial and military expansion."
  POL_removed_spirits: "National Ideals Changed"
- POL_removed_spirits_desc: "With recent political developments, a considerable amount of efforts has been diverted into reverting programs and institutions of previous goverment, causing frustration and headache for many."
+ POL_removed_spirits_desc: "With recent political developments, a considerable amount of efforts has been diverted into reverting programs and institutions of previous government, causing frustration and headache for many."
  POL_paf_idea: "Polish Armed Forces"
  POL_paf_idea_desc: "The legacy of Polish army ensures its combat efficiency."
  POL_network_centric_doctrine_idea: "Network Centrific Doctrine"
