--- a/localisation/english/MD_focus_ARM_l_english.yml
+++ b/localisation/english/MD_focus_ARM_l_english.yml
@@ -833,7 +833,7 @@
  ARM_russian_invest: "Russian Investments"
  ARM_russian_invest_desc: "We can ask the Russians to help develop our agricultural basis. They may want some concessions, but we cant do all of this on our own."
  ARM_arenda: "Land Lease"
- ARM_arenda_desc: "The Government owns most of the land around and we are planning to nationalize even more of it. Lets lease some of it to farmers so our food prices dont skyrocket as we develop heavy industry."
+ ARM_arenda_desc: "The Government owns most of the land around and we are planning to nationalize even more of it. Lets lease some of it to farmers so our food prices don't skyrocket as we develop heavy industry."
  ARM_free_economic_zone: "Armenian Free Economic Zone (AFEZ)"
  ARM_free_economic_zone_desc: "Free economic zones (FEZ), also known as free economic territories (FETs) or simply free zones (FZ), are regions specifically designated for trade activities that are taxed differently from the rest of the country. They are either taxed lightly or not at all, bolstering economic activity. Each country has its own FEZ rules, depending on the country of export as well."
  ARM_gold_extract: "Gold development"
@@ -1145,8 +1145,8 @@
  ARM_new_order_TT: "§YArmenia will emerge into new order of semi-autocratic dominance of reactionary politicians.§!"
  ARM_militarism_TT: "§YCult of Militarism will arise in Armenia.§!"
  ARM_zakupka_TT: "§YRussia will extend our purchase agreements and expand the functionality of the clauses of the agreement on the purchase of special weapons by Armenia.§!"
- ARM_partit_greece_TT: "§YGreece will ally us if their government follows §YEmerging or §YNationalist Outlook.§!"
- ARM_partit_syria_TT: "§YSyria will ally us if their government follows §YEmerging or §YNationalist Outlook.§!"
+ ARM_partit_greece_TT: "Greece will ally us if their government follows §YEmerging§! or §YNationalist Outlook.§!"
+ ARM_partit_syria_TT: "Syria will ally us if their government follows §YEmerging§! or §YNationalist Outlook.§!"
  ARM_com1_TT: "People's party of Armenia will take the priority over other communists."
  ARM_com2_TT: "Communist Party of Armenia will take the priority over other communists."
  ARM_wpk_TT: "§YMilitary-Industrial Complex§! will be able to start developing new weapons."
