--- a/localisation/english/MD_focus_POL_l_english.yml
+++ b/localisation/english/MD_focus_POL_l_english.yml
@@ -2920,7 +2920,7 @@
  POL_construction_reform: "Construction Process Reformed"
  POL_construction_reform_desc: "Construction unions installed only recently now control most major construction sites in a country."
  POL_quality_control_idea: "Local Quality Control"
- POL_quality_control_idea_desc: "Recently government made a major push to ensure top-quality of vast array of proudcts."
+ POL_quality_control_idea_desc: "Recently, the government has strongly promoted to ensure high quality of product production."
  POL_speed_development_idea: "High Speed Development"
  POL_speed_development_idea_desc: "With recent pushes to increase speed of many projects started in recent years it is now clear that talks had eventually led to some action and control."
  POL_increase_research_funding_idea: "Research Funding Increased"
