--- a/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
+++ b/localisation/english/MD_focus_SER_VOJ_MNT_l_english.yml
@@ -1042,7 +1042,7 @@
  Serbia.9.d: ""
  Serbia.9.a: "Launch a national investigation, 'Operation Sabre' shall be in full effect."
  Serbia.9.b: "How very unfortunate, and another one bites the dust..."
- Serbia.10.d: "" #End with, "But what would cause the politicians of Serbia to become so desperate?"
+ Serbia.10.d: ""
  Serbia.10.a: "That blasted DSS is to blame, whatever happened to the political freedoms in Serbia?"
  Serbia.10.b: "It's a good thing this criminal activity has been stopped"
  Serbia.11.d: ""
