--- a/localisation/english/MD_focus_AZE_l_english.yml
+++ b/localisation/english/MD_focus_AZE_l_english.yml
@@ -359,7 +359,7 @@
  AZE_military_expansion: "Military Expansion"
  AZE_military_expansion_desc: "We need to expand our military production to meet the demands"
  AZE_govern_property: "Governmental Property"
- AZE_govern_property_desc: "Governmental property is key to our future development"
+ AZE_govern_property_desc: "Government property is key to our future development"
  AZE_legacy_repucblic: "Legacy Of The Republic"
  AZE_legacy_repucblic_desc: "Republic was not ideal but was clearly something with good intentions"
  AZE_ally_military: "Ally Generals"
